fix: [CDS-82465]: migrator fixing shell script host (#274)